--- a/investmenttracker_springboot/investmenttracker/pom.xml
+++ b/investmenttracker_springboot/investmenttracker/pom.xml
@@ -92,6 +92,18 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				  <groupId>org.springframework.boot</groupId>
+		         <artifactId>spring-boot-maven-plugin</artifactId>
+		         <configuration>
+		            <skip>true</skip>
+		         </configuration>
+		         <executions>
+		            <execution>
+		               <phase>none</phase>
+		            </execution>
+		         </executions>
+		      </plugin>
 		</plugins>
 	</build>
 
