--- a/investmenttracker_springboot/investmenttracker/src/main/resources/application.properties
+++ b/investmenttracker_springboot/investmenttracker/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 spring.application.name=investment
-spring.datasource.url=jdbc:mysql://localhost:3306/student
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/student
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://sql12.freesqldatabase.com:3306/sql12791900
+spring.datasource.username=sql12791900
+spring.datasource.password=SiCpXKPTfm
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
