--- a/investmenttracker_springboot/investmenttracker/pom.xml
+++ b/investmenttracker_springboot/investmenttracker/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>4.0.0-SNAPSHOT</version>
+		<version>3.2.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.investmenttracker</groupId>
@@ -76,6 +76,7 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<version>1.18.32</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
@@ -92,18 +93,6 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			<plugin>
-				  <groupId>org.springframework.boot</groupId>
-		         <artifactId>spring-boot-maven-plugin</artifactId>
-		         <configuration>
-		            <skip>true</skip>
-		         </configuration>
-		         <executions>
-		            <execution>
-		               <phase>none</phase>
-		            </execution>
-		         </executions>
-		      </plugin>
 		</plugins>
 	</build>
 
